# testing-repo

./: .gitignore  README.md  docker-compose.yaml
app/: Dockerfile  pyproject.toml
app/app/: .env.template  config.py  main.py
app/app/core/fastapi/models/: base_models.py
app/app/core/fastapi/routers/: health.py  test.py
app/app/core/otlp/: utils.py
app/app/core/zitadel/: access_control.py  auth.py  client-credentials-token-generator.py
